actualizado swagger en la parte de authController
